src/App.css
@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
* {
  margin: 0;
  padding: 0;
}
:root {
  --color-white: #ffffff;
  --color-body: #000000;
  --bg-color-gray: #f0f2f5;
  --color-midgray: #878787;
  --color-primary: #3858f6;
  --color-secondary: #d93e40;
  --color-gray: #65676b;
  --color-black-light: #ffffff;
  --shadow-dark: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
  --shadow-light: 0 2px 6px 0 rgba(0, 0, 0, 0.05);
  --radius: 10px;
  --radius-small: 6px;
  --color-heading: #000;
  --color-extra01: #666;
  --color-lighter: #ced0d4;
  --p-bold: 700;
  --color-lightest: #f0f2f5;
  --bg-color-white: #fff;
  --s-bold: 700;
  --h5-size: 18px;
  --color-twitter: #1ba1f2;
  --color-fb: #3b5997;
  --color-linkedin: #0077b5;
  --color-insta: #c231a1;
  --color-github: black;
  --color-stack: hsl(27, 90%, 55%);
}
body {
  font-family: "Poppins";
  background-color: var(--bg-color-gray);
  color: var(--color-body);
  margin: 0;
  padding: 0;
  overflow: hidden;
}
.dark {
  --color-white: #1a1a1a;
  --color-gray: #ffffff;
  --bg-color-gray: #242424;
  --color-heading: #fff;
  --color-lighter: #333;
  --color-lightest: #212121;
  --bg-color-white: #1a1a1a;
  --color-black-light: #181818;
}
/* Toast */
.toast-custom {
  font-family: "Poppins" !important;
}
/* Scrollbar Code */
::-webkit-scrollbar {
  width: 7px;
  height: 10px;
}
::-webkit-scrollbar-thumb {
  border-radius: 8px;
  background: var(--color-primary);
}
/* Global */
.hover-line {
  color: var(--color-heading);
  text-decoration: none;
  position: relative;
  display: inline;
  background-image: linear-gradient(90deg, currentColor 0, currentColor);
  background-size: 0 2px;
  background-position: 0 95%;
  transition: background-size 0.25s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
  padding: 0.1% 0;
  background-repeat: no-repeat;
}
.hover-line:hover {
  background-size: 100% 2px;
}
.hover-line-primary {
  text-decoration: none;
  position: relative;
  display: inline;
  background-image: linear-gradient(90deg, #3858f6 0, #3858f6);
  background-size: 0 2px;
  background-position: 0 95%;
  transition: background-size 0.25s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0s;
  padding: 0.1% 0;
  background-repeat: no-repeat;
}
.hover-line-primary:hover {
  background-size: 100% 2px;
}
.section-heading {
  color: var(--color-heading);
  margin-bottom: 2rem;
}
.dot {
  background: var(--color-extra01);
  width: 4px;
  height: 4px;
  border-radius: 100%;
}
.category span {
  color: var(--color-secondary);
}
.category span:hover {
  color: var(--color-primary);
}
.td-none {
  text-decoration: none;
}
.card-h3 {
  color: var(--color-heading);
  font-weight: var(--s-bold);
}
.author-name {
  color: var(--color-heading);
}
.info {
  display: flex;
  gap: 1rem;
  align-items: center;
}
.info span {
  color: var(--color-extra01);
  font-size: 12px;
}
/* header component */
.header {
  background-color: var(--color-white);
  padding: 1rem 2rem;
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 20%);
}
.header .brand {
  width: 80%;
}
/* Menu Item Component */
.menu-item {
  color: var(--color-midgray);
  font-weight: 500;
  text-decoration: none;
}
.menu-item:hover {
  color: var(--color-primary);
  cursor: pointer;
}
/* Search Component */
.search {
  background-color: var(--bg-color-gray);
  display: flex;
  padding: 0.4rem 1rem;
  border-radius: 50px;
  gap: 0.2rem;
}
.search #search {
  border: none;
  background-color: var(--bg-color-gray);
  outline: none;
  color: var(--color-gray);
}
.search {
  color: var(--color-gray);
}
.header-icons.menu {
  display: none;
}
.header-icons {
  background-color: var(--bg-color-gray);
  display: flex;
  align-items: center;
  padding: 0.5rem 0.5rem;
  border-radius: 50px;
}
.header-icons:hover {
  background-color: var(--color-primary);
  cursor: pointer;
}
.header-icons:hover svg {
  color: var(--color-white);
}
.header-icons svg {
  color: var(--color-gray);
  font-size: 1rem;
}
.profile-pic {
  display: flex;
  align-items: center;
  justify-content: center;
}
.profile-pic svg {
  padding: 0.3rem 0.3rem;
  background: var(--bg-color-gray);
  border-radius: 50%;
  color: var(--color-gray);
}
.profile-pic svg:hover {
  background: var(--color-primary);
  color: var(--color-white);
}
.profile-pic:hover {
  cursor: pointer;
}
.profile-pic img {
  border-radius: 50px;
  width: 60%;
}
/* Drawer Component */
.drawer .MuiPaper-elevation {
  background-color: var(--color-white) !important;
}
.drawer .drawer-header {
  display: flex;
  justify-content: space-between;
  margin: 1rem 1rem;
}
/* Lists Component */
.lists {
  background-color: var(--color-white);
}
.list-item {
  color: var(--color-gray);
  font-family: "Poppins";
  font-weight: 600;
  text-decoration: none;
}
/* Theme Switcher */
.theme-switcher {
  display: flex;
  position: fixed;
  right: -50px;
  top: 50%;
  transform: translateY(-50%) rotate(90deg);
  z-index: 1035;
  transform: rotate(90deg);
  justify-content: center;
  align-items: flex-start;
}
.mid {
  border-right: 2px solid var(--color-primary);
}
.switch-light,
.switch-dark {
  color: var(--color-primary);
  font-family: "Poppins";
  font-weight: 600;
  text-transform: uppercase;
  cursor: pointer;
}
.switch-dark {
  padding: 0.4rem 1.2rem;
  font-size: 15px;
  border: 2px solid var(--color-primary);
  border-top-right-radius: 50px;
  border-bottom-right-radius: 50px;
}
.switch-light {
  padding: 0.4rem 1.2rem;
  font-size: 15px;
  border: 2px solid var(--color-primary);
  border-top-left-radius: 50px;
  border-bottom-left-radius: 50px;
}
.switch-active {
  background-color: var(--color-primary);
  color: white;
}
/* Hero Component */
.hero img {
  width: 100%;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}
/* Arrows Component */
.arrow-icons {
  display: flex;
  gap: 1rem;
  justify-content: center;
}
/* ... */

